# Qt6Vcpkg

./: CMakeLists.txt  README.md  vcpkg.json
include/: scenemodifier.h
src/: main.cpp  scenemodifier.cpp
